--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,6 +16,10 @@ main:
   - name: Publications
     url: '#publications'
     weight: 40
+  - name: Learn-Play
+    url:'#games'
+    weight: 50
+    
 
 
 # Link to a PDF of your resume/CV from the menu.
