--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: /tmp/hugo_cache_runner/
-          key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.mod') }}
+          key: ${{ runner.os }}-hugomod-${{ hashFiles('go.mod') }}
           restore-keys: |
             ${{ runner.os }}-hugomod-
       - name: Setup Pages
