--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Posts
-    url: 'https://feldaher.hashnode.dev/'
+    url: '#posts'
     weight: 20
   - name: Projects
     url: '#projects'
